--- a/css/utilities.css
+++ b/css/utilities.css
@@ -396,6 +396,10 @@
 .z1 {
   z-index: 1;
 }
+
 .text-center {
   text-align: center;
+}
+.text-left {
+  text-align: left;
 }
